--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@privy-io/react-auth": "^3.10.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.4"
-  }
+    "name":  "frontend",
+    "private":  true,
+    "version":  "0.0.0",
+    "type":  "module",
+    "scripts":  {
+                    "dev":  "next dev",
+                    "build":  "next build",
+                    "start":  "next start",
+                    "lint":  "next lint"
+                },
+    "dependencies":  {
+                         "@privy-io/react-auth":  "^3.10.0",
+                         "next":  "^15.1.0",
+                         "react":  "^19.2.0",
+                         "react-dom":  "^19.2.0",
+                         "@solana-program/system":  "latest",
+                         "@solana-program/token":  "latest",
+                         "@solana/kit":  "latest"
+                     },
+    "devDependencies":  {
+                            "@eslint/eslintrc":  "^3.2.0",
+                            "autoprefixer":  "^10.4.20",
+                            "eslint":  "^9.39.1",
+                            "eslint-config-next":  "^15.1.0",
+                            "next-pwa":  "^5.6.0",
+                            "postcss":  "^8.4.49",
+                            "tailwindcss":  "^3.4.15"
+                        }
 }
