--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@solana-program/token": "latest",
         "@solana/kit": "latest",
         "ethers": "^6.16.0",
+        "lucide-react": "^0.563.0",
         "next": "^15.5.9",
         "react": "^19.2.3",
         "react-dom": "^19.2.3"
