--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,7 @@
+# Base Mini App Configuration
+# Change this to your production URL when deploying (e.g., https://your-app.vercel.app)
+NEXT_PUBLIC_URL=http://localhost:3000
+
 # Privy Configuration
 # Get your App ID from https://dashboard.privy.io
 NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id_here
