--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@farcaster/miniapp-sdk": "^0.2.1",
         "@privy-io/react-auth": "^3.12.0",
         "@solana-program/system": "latest",
         "@solana-program/token": "latest",
