--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "autoprefixer": "^10.4.20",
         "eslint": "^9.39.1",
         "eslint-config-next": "^15.1.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "next-pwa": "^5.6.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.15"
